--- a/HWYZ/Views/DeliveEdit/List.cshtml
+++ b/HWYZ/Views/DeliveEdit/List.cshtml
@@ -22,10 +22,10 @@
                 <tr>
                     <td>@item.ProductCode</td>
                     <td>@item.ProductName</td>
-                    <td>@item.OrderNumber</td>
+                    <td>@item.RealNumber</td>
                     <td>@item.Price</td>
                     <td>@item.Discount</td>
-                    @{var pay = @item.Price * @item.OrderNumber * @item.Discount;}
+                    @{var pay = @item.Price * @item.RealNumber * @item.Discount;}
                     <td>@pay</td>
                     <td data-id="@item.ID">
                         <a href="javascript:void(0)" class="editItem" data-toggle="modal" data-target="#dlg_edit">编辑</a>
