--- a/HWYZ/Views/OrderEdit/Index.cshtml
+++ b/HWYZ/Views/OrderEdit/Index.cshtml
@@ -25,7 +25,7 @@
             <div class="col-md-4">
                 <div class="input-group">
                     <span class="input-group-addon">备注</span>
-                    <input type="text" class="form-control" />
+                    <input type="text" class="form-control" name="remark" />
                 </div>
             </div>
         </div>
