--- a/HWYZ/Views/Order/List.cshtml
+++ b/HWYZ/Views/Order/List.cshtml
@@ -40,7 +40,7 @@
                     {
                         <td>@item.SubmitTime</td>
                     }
-                    <td>@item.Payable</td>
+                    <td>@item.Paid</td>
                     @switch (@item.Status)
                     {
                         case OrderStatus.BeforeSubmit:<td>待提交</td>; break;
