--- a/HWYZ/Views/ReportOfSell/Index.cshtml
+++ b/HWYZ/Views/ReportOfSell/Index.cshtml
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="input-group">
-                    <span class="input-group-addon">采购单位</span>
-                    <input type="hidden" data-select="s" class="_select" style="width: 100%;" name="StoreId" />
+                    <span class="input-group-addon">商品名称</span>
+                    <input type="hidden" data-select="pr" class="_select" style="width: 100%;" name="ProductName" />
                 </div>
             </div>
             <div class="col-md-4">
@@ -33,8 +33,8 @@
         </div>
         <div class="row" style="margin-top: 20px;">
             <ul class="nav nav-tabs">
-                <li role="presentation" class="detail active"><a href="#detail">按明细</a></li>
-                <li role="presentation" class="store"><a href="#store">按单位</a></li>
+                <li role="presentation" class="number active"><a href="#number">按数量</a></li>
+                <li role="presentation" class="pay"><a href="#pay">按金额</a></li>
             </ul>
         </div>
         <div class="row" id="container">
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-@Scripts.Render("~/Scripts/Page/reportofsend.js")
+@Scripts.Render("~/Scripts/Page/reportofsell.js")
 @Scripts.Render("~/Scripts/select2/select2.min.js")
 @Scripts.Render("~/Scripts/select.js")
 @Scripts.Render("~/Scripts/datetimepicker/bootstrap-datetimepicker.min.js")
