--- a/HWYZ/Views/ReportOfSell/ListOfNumber.cshtml
+++ b/HWYZ/Views/ReportOfSell/ListOfNumber.cshtml
@@ -1,20 +1,19 @@
 ﻿@using HWYZ.Models;
+
 <div class="table-responsive">
     <table class="table table-hover table-bordered">
         <thead>
             <tr>
-                <td>分店</td>
-                <td>产品名称</td>
-                <td>产品编号</td>
-                <td>采购总数</td>
+                <td>商品名称</td>
+                <td>商品编号</td>
+                <td>数量</td>
             </tr>
         </thead>
         <tbody>
             @{
-                foreach (PSMX item in ViewBag.list)
+                foreach (CXSL item in ViewBag.list)
                 {
                 <tr>
-                    <td>@item.StoreName</td>
                     <td>@item.ProductName</td>
                     <td>@item.ProductCode</td>
                     <td>@item.ProductNumber</td>
