添加退出按钮 添加分店可在地图选择

--- a/HWYZ/Views/Shared/_Layout.cshtml
+++ b/HWYZ/Views/Shared/_Layout.cshtml
@@ -18,6 +18,15 @@
                     HUIWEI YIZHAN CLOUD PLATFORM
                 </a>
             </div>
+
+            <div class="btn-group" style="float: right; margin: 50px 10px 0 0;">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    欢迎您，@UserContext.user.DisplayName <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="Login/LogOff">退出</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="container-fluid">
