--- a/HWYZ/Views/Shared/_LoginLayout.cshtml
+++ b/HWYZ/Views/Shared/_LoginLayout.cshtml
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
     <meta charset="utf-8" />
     <title>徽味驿站云平台</title>
     <link href="~/Images/logo.jpg" rel="shortcut icon" type="image/x-icon" />
