--- a/HWYZ/Views/StoreGrant/Add.cshtml
+++ b/HWYZ/Views/StoreGrant/Add.cshtml
@@ -116,6 +116,7 @@
             </form>
         </div>
         <div class="modal-footer">
+            <button type="button" class="btn btn-primary map">查看地图</button>
             <button type="button" class="btn btn-primary save">保存</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
         </div>
