--- a/HWYZ/Views/StoreGrant/Edit.cshtml
+++ b/HWYZ/Views/StoreGrant/Edit.cshtml
@@ -25,6 +25,8 @@
                     <div class="input-group">
                         <span class="input-group-addon">所在城市</span>
                         <label class="form-control">@ViewBag.store.Province @ViewBag.store.City @ViewBag.store.Country</label>
+                        <input type="hidden" name="City" value="@ViewBag.store.City" />
+                        <input type="hidden" name="Country" value="@ViewBag.store.Country" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -108,16 +110,19 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="Status" class="control-label">状态:</label>
-                    <select name="Status" class="form-control">
-                        <option value="enable">启用</option>
-                        <option value="disable">不启用</option>
-                    </select>
-                    <input type="hidden" id="Status" value="@ViewBag.store.Status"/>
+                    <div class="input-group">
+                        <span class="input-group-addon">状态</span>
+                        <select name="Status" class="form-control">
+                            <option value="enable">启用</option>
+                            <option value="disable">不启用</option>
+                        </select>
+                        <input type="hidden" id="Status" value="@ViewBag.store.Status"/>
+                    </div>
                 </div>
             </form>
         </div>
         <div class="modal-footer">
+            <button type="button" class="btn btn-primary map">查看地图</button>
             <button type="button" class="btn btn-primary save">保存</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
         </div>
