修改样式和问题
1.登录页面修改
2.门店管理，增加开户行户名、银行账号、开户名称
3.商品管理价格带单位
4.商品管理中的“退市”状态用红色显示
5.商品管理中图片保存路径修改为相对路径
6.送货员查询条件默认所有条件，“离职”状态红色显示
7.报表默认时间要显示
8.配送报表增加门店类型筛选
9.配送报表文字“按明细”改成“按采购数量”；按“金额”改成“按采购金额”
10.门店管理员-->商品管理--商品维护“允许退货”不需要显示
11.订单配送状态用颜色反差显示
12.时间控件改为中文

--- a/HWYZ/Views/Couriers/List.cshtml
+++ b/HWYZ/Views/Couriers/List.cshtml
@@ -45,7 +45,7 @@
                     }
                     else
                     {
-                        <td>离职</td>
+                        <td style="color: red;">离职</td>
                     }
                     @if (UserContext.user.Store != null)
                     {
