--- a/HWYZ/Views/StoreGrant/Add.cshtml
+++ b/HWYZ/Views/StoreGrant/Add.cshtml
@@ -91,6 +91,18 @@
                         <input type="text" class="form-control" name="Bank" />
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">开户行</span>
+                        <input type="text" class="form-control" name="BankName" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">开户人姓名</span>
+                        <input type="text" class="form-control" name="BankAccount" />
+                    </div>
+                </div>
                 <div class="form-group row">
                     <div class="col-md-6">
                         <div class="input-group">
