--- a/HWYZ/Views/ProductSet/Add.cshtml
+++ b/HWYZ/Views/ProductSet/Add.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HWYZ.Models;
+@using HWYZ.Context;
 
 <style>
     .webuploader-container div:first-child { width: 86px; height: 40px; }
@@ -46,15 +47,18 @@
                         </select>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon">允许退换货</span>
-                        <select class="form-control" name="AllowReturn">
-                            <option value="1">允许</option>
-                            <option value="0">不允许</option>
-                        </select>
+                @if (String.IsNullOrEmpty(UserContext.user.StoreId))
+                {
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon">允许退换货</span>
+                            <select class="form-control" name="AllowReturn">
+                                <option value="1">允许</option>
+                                <option value="0">不允许</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
+                }
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon">备注</span>
