--- a/HWYZ/Views/ReportOfSell/Index.cshtml
+++ b/HWYZ/Views/ReportOfSell/Index.cshtml
@@ -46,6 +46,7 @@
 @Scripts.Render("~/Scripts/select2/select2.min.js")
 @Scripts.Render("~/Scripts/select.js")
 @Scripts.Render("~/Scripts/datetimepicker/bootstrap-datetimepicker.min.js")
+@Scripts.Render("~/Scripts/datetimepicker/bootstrap-datetimepicker.zh-CN.js")
 @Scripts.Render("~/Scripts/highcharts/highcharts.js")
 @Scripts.Render("~/Scripts/highcharts/data.js")
 @Scripts.Render("~/Scripts/highcharts/exporting.js")
