--- a/HWYZ/Views/ReportOfSend/Index.cshtml
+++ b/HWYZ/Views/ReportOfSend/Index.cshtml
@@ -27,14 +27,26 @@
                 </div>
             </div>
         </div>
+        <div class="row" style="margin-top: 15px;">
+            <div class="col-md-4">
+                <div class="input-group">
+                    <span class="input-group-addon">门店类型</span>
+                    <select name="StoreType" class="form-control">
+                        <option value="">所有</option>
+                        <option value="0">加盟店</option>
+                        <option value="1">配送站</option>
+                    </select>
+                </div>
+            </div>
+        </div>
         <div class="row" style="margin: 15px 0px 0 0;">
             <a class="btn btn-info query" style="float: right; margin-left: 20px;" href="javascript:void(0)">查询</a>
             <a class="btn btn-info export" style="float: right;" href="javascript:void(0)">导出</a>
         </div>
         <div class="row" style="margin-top: 20px;">
             <ul class="nav nav-tabs">
-                <li role="presentation" class="detail active"><a href="#detail">按明细</a></li>
-                <li role="presentation" class="store"><a href="#store">按单位</a></li>
+                <li role="presentation" class="detail active"><a href="#detail">按采购数量</a></li>
+                <li role="presentation" class="store"><a href="#store">按采购金额</a></li>
             </ul>
         </div>
         <div class="row" id="container">
@@ -46,6 +58,7 @@
 @Scripts.Render("~/Scripts/select2/select2.min.js")
 @Scripts.Render("~/Scripts/select.js")
 @Scripts.Render("~/Scripts/datetimepicker/bootstrap-datetimepicker.min.js")
+@Scripts.Render("~/Scripts/datetimepicker/bootstrap-datetimepicker.zh-CN.js")
 @Scripts.Render("~/Scripts/highcharts/highcharts.js")
 @Scripts.Render("~/Scripts/highcharts/data.js")
 @Scripts.Render("~/Scripts/highcharts/exporting.js")
