--- a/HWYZ/Views/Shared/_LoginLayout.cshtml
+++ b/HWYZ/Views/Shared/_LoginLayout.cshtml
@@ -1,35 +1,34 @@
 ﻿<!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>徽味驿站云平台</title>
-    <link href="~/Images/logo.jpg" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width" />
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
+    @Styles.Render("~/Content/styles.css")
+    @Scripts.Render("~/Scripts/jquery-1.9.1.min.js")
+    @Scripts.Render("~/Scripts/jquery.form.min.js")
 </head>
 <body>
-    <header>
-        <div class="row">
-            <div class="col-md-12 bodyheader">
-                <h3>徽味驿站云平台</h3>
+    <div class="htmleaf-container">
+        <div class="wrapper">
+            <div class="container">
+                @RenderBody()
             </div>
+
+            <ul class="bg-bubbles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
-    </header>
-    <div id="body">
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
     </div>
-    <footer>
-        <div class="FootBox">
-            <div class="FootContent">
-                <p>&copy; @DateTime.Now.Year - 徽味驿站版权所有</p>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
