--- a/HWYZ/Views/StoreGrant/Edit.cshtml
+++ b/HWYZ/Views/StoreGrant/Edit.cshtml
@@ -85,6 +85,18 @@
                         <input type="text" class="form-control" name="Bank" value="@ViewBag.store.Bank" />
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">开户行</span>
+                        <input type="text" class="form-control" name="BankName" value="@ViewBag.store.BankName"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">开户人姓名</span>
+                        <input type="text" class="form-control" name="BankAccount" value="@ViewBag.store.BankAccount"/>
+                    </div>
+                </div>
                 <div class="form-group row">
                     <div class="col-md-6">
                         <div class="input-group">
